--- a/apps/user_management/locale/pl/LC_MESSAGES/django.po
+++ b/apps/user_management/locale/pl/LC_MESSAGES/django.po
@@ -1,265 +1,257 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-#
+# 
 # Translators:
-# Roberto Rosario <roberto.rosario.gonzalez@gmail.com>, 2012.
+#   <winterfall24@gmail.com>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: Mayan EDMS\n"
-"Report-Msgid-Bugs-To: \n"
+"Report-Msgid-Bugs-To: http://github.com/rosarior/mayan/issues\n"
 "POT-Creation-Date: 2012-02-12 15:20-0400\n"
-"PO-Revision-Date: 2012-02-02 18:30+0000\n"
-"Last-Translator: Roberto Rosario <roberto.rosario.gonzalez@gmail.com>\n"
-"Language-Team: Spanish (Castilian) (http://www.transifex.net/projects/p/"
-"mayan-edms/team/es/)\n"
-"Language: es\n"
+"PO-Revision-Date: 2012-02-21 15:33+0000\n"
+"Last-Translator: mic <winterfall24@gmail.com>\n"
+"Language-Team: Polish (http://www.transifex.net/projects/p/mayan-edms/language/pl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Language: pl\n"
+"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2)\n"
 
 #: __init__.py:13
 msgid "user list"
-msgstr "lista de usuarios"
+msgstr "lista użytkowników"
 
 #: __init__.py:14 views.py:31
 msgid "users"
-msgstr "usuarios"
+msgstr "użytkownicy"
 
 #: __init__.py:15 __init__.py:24
 msgid "edit"
-msgstr "editar"
+msgstr "edytuj"
 
 #: __init__.py:16 views.py:97
 msgid "create new user"
-msgstr "crear nuevo usuario"
+msgstr "rejestracja nowego użytkownika"
 
 #: __init__.py:17 __init__.py:18 __init__.py:26 __init__.py:27
 msgid "delete"
-msgstr "eliminar"
+msgstr "usunąć"
 
 #: __init__.py:19 __init__.py:20
 msgid "reset password"
-msgstr "restablecer contraseña"
+msgstr "zresetować hasło"
 
 #: __init__.py:22
 msgid "group list"
-msgstr "list de group"
+msgstr "lista grupa"
 
 #: __init__.py:23 views.py:228
 msgid "groups"
-msgstr "grupos"
+msgstr "grupy"
 
 #: __init__.py:25 views.py:276
 msgid "create new group"
-msgstr "crear nuevo grupo"
+msgstr "utwórz nową grupę"
 
 #: __init__.py:28 views.py:232
 msgid "members"
-msgstr "miembros"
+msgstr "członkowie"
 
 #: forms.py:13
 msgid "New password"
-msgstr "Nueva contraseña"
+msgstr "Nowe hasło"
 
 #: forms.py:14
 msgid "Confirm password"
-msgstr "Confirmar contraseña"
+msgstr "Potwierdź hasło"
 
 #: permissions.py:7
 msgid "User management"
-msgstr "Administración de usuarios"
+msgstr "Zarządzanie użytkownikami"
 
 #: permissions.py:9
 msgid "Create new users"
-msgstr "Crear nuevos usuarios"
+msgstr "Tworzenie nowych użytkowników"
 
 #: permissions.py:10
 msgid "Edit existing users"
-msgstr "Editar usuarios existentes"
+msgstr "Edycja istniejących użytkowników"
 
 #: permissions.py:11
 msgid "View existing users"
-msgstr "Ver usuarios existentes"
+msgstr "Zobacz istniejących użytkowników"
 
 #: permissions.py:12
 msgid "Delete existing users"
-msgstr "Eliminar usuarios existentes"
+msgstr "Usuwanie istniejących użytkowników"
 
 #: permissions.py:14
 msgid "Create new groups"
-msgstr "Crear nuevos grupos"
+msgstr "Tworzyć nowe grupy"
 
 #: permissions.py:15
 msgid "Edit existing groups"
-msgstr "Editar grupos existentes"
+msgstr "Edytować istniejące grupy"
 
 #: permissions.py:16
 msgid "View existing groups"
-msgstr "Ver grupos existentes"
+msgstr "Zobacz istniejących grup"
 
 #: permissions.py:17
 msgid "Delete existing groups"
-msgstr "Eliminar grupos existentes"
+msgstr "Usunąć istniejące grupy"
 
 #: views.py:35
 msgid "full name"
-msgstr "nombre completo"
+msgstr "pełne imię i nazwisko"
 
 #: views.py:39
 msgid "email"
-msgstr "correo electrónico"
+msgstr "e-mail"
 
 #: views.py:43
 msgid "active"
-msgstr "activo"
+msgstr "aktywny"
 
 #: views.py:47
 msgid "has usable password?"
-msgstr "¿Tiene contraseña utilizable?"
+msgstr "posiada hasło?"
 
 #: views.py:61
 msgid ""
 "Super user and staff user editing is not allowed, use the admin interface "
 "for these cases."
-msgstr ""
-"No se permite editar el super usuario y usuario de personal, use la interfaz "
-"de administración para estos casos."
+msgstr "Super user oraz staff user edycja nie jest możliwa , należy użyć interfejsu administratora w takich przypadkach."
 
 #: views.py:68
 #, python-format
 msgid "User \"%s\" updated successfully."
-msgstr "Usuario \"%s\" actualizado exitsamente."
+msgstr "Użytkownik \"%s\" został zaktualizowany."
 
 #: views.py:74
 #, python-format
 msgid "edit user: %s"
-msgstr "editar usuario: %s"
+msgstr "edytuj użytkownika: %s"
 
 #: views.py:77 views.py:135 views.py:198
 msgid "user"
-msgstr "usuario"
+msgstr "użytkownik"
 
 #: views.py:91
 #, python-format
 msgid "User \"%s\" created successfully."
-msgstr "Usuario \"%s\" ha creado exitosamente."
+msgstr "Użytkownik \"%s\" został utworzony pomyślnie."
 
 #: views.py:113 views.py:167
 msgid "Must provide at least one user."
-msgstr "Debe proveer al menos un usuario."
+msgstr "Musi podać co najmniej jednego użytkownika."
 
 #: views.py:123
 msgid ""
 "Super user and staff user deleting is not allowed, use the admin interface "
 "for these cases."
-msgstr ""
-"No se permite eliminar el super usuario y usuario de personal, use la "
-"interfaz de administración para estos casos."
+msgstr "Super user oraz staff user usuwanie nie jest możliwa , należy użyć interfejsu administratora w takich przypadkach."
 
 #: views.py:126
 #, python-format
 msgid "User \"%s\" deleted successfully."
-msgstr "Usuario \"%s\" eliminado exitosamente."
+msgstr "Użytkownik \"%s\" został usunięta."
 
 #: views.py:128
 #, python-format
 msgid "Error deleting user \"%(user)s\": %(error)s"
-msgstr "Error eliminando el usuario \"%(user)s\": %(error)s "
+msgstr "Błąd podczas usuwania użytkownika \" %(user)s \": %(error)s "
 
 #: views.py:143
 #, python-format
 msgid "Are you sure you wish to delete the user: %s?"
-msgstr "¿Está seguro que desea eliminar el usuario: %s?"
+msgstr "Czy na pewno chcesz usunąć użytkownika:%s.?"
 
 #: views.py:145
 #, python-format
 msgid "Are you sure you wish to delete the users: %s?"
-msgstr "¿Está seguro que desea eliminar los usuarios: %s?"
+msgstr "Czy na pewno chcesz usunąć użytkowników:%s?"
 
 #: views.py:178
 msgid "Passwords do not match, try again."
-msgstr "Las contraseñas no coinciden, vuelva a intentarlo."
+msgstr "Hasła nie pasują, spróbuj ponownie."
 
 #: views.py:183
 msgid ""
 "Super user and staff user password reseting is not allowed, use the admin "
 "interface for these cases."
-msgstr ""
-"No se permite cambiar la contraseña del super usuario y usuarios de "
-"personal, use la interfaz de administración para estos casos."
+msgstr "Super user oraz staff user reset nie jest możliwa , należy użyć interfejsu administratora w takich przypadkach."
 
 #: views.py:187
 #, python-format
 msgid "Successfull password reset for user: %s."
-msgstr "Restablecimiento exitoso de contraseña para el usuario: %s."
+msgstr "Pomyślne resetowania hasła użytkownika:%s."
 
 #: views.py:189
 #, python-format
 msgid "Error reseting password for user \"%(user)s\": %(error)s"
-msgstr ""
-"Error de restaurando la contraseña para el usuario \"%(user)s\": %(error)s "
+msgstr "Błąd podczas resetowania hasło użytkownika \" %(user)s \": %(error)s "
 
 #: views.py:205
 #, python-format
 msgid "Reseting password for user: %s"
-msgstr "Restaurando contraseña del usuario: %s"
+msgstr "Resetowanie hasła użytkownika:%s"
 
 #: views.py:207
 #, python-format
 msgid "Reseting password for users: %s"
-msgstr "Restaurando la contraseña de los usuarios: %s"
+msgstr "Resetowanie hasła dla użytkowników:%s"
 
 #: views.py:249
 #, python-format
 msgid "Group \"%s\" updated successfully."
-msgstr "Grupo \"%s\" actualizado exitosamente."
+msgstr "Grupa \"%s\" została zaktualizowany."
 
 #: views.py:255
 #, python-format
 msgid "edit group: %s"
-msgstr "editar grupo: %s"
+msgstr "edycja grupy:%s"
 
 #: views.py:258 views.py:311 views.py:356
 msgid "group"
-msgstr "grupo"
+msgstr "grupa"
 
 #: views.py:270
 #, python-format
 msgid "Group \"%s\" created successfully."
-msgstr "Grupo \"%s\" creado exitosamente."
+msgstr "Grupa \"%s\" została utworzona pomyślnie."
 
 #: views.py:292
 msgid "Must provide at least one group."
-msgstr "Debe proveer al menos un grupo."
+msgstr "Musi podać co najmniej jedną grupę."
 
 #: views.py:302
 #, python-format
 msgid "Group \"%s\" deleted successfully."
-msgstr "Grupo \"%s\" eliminado con exitosamente."
+msgstr "Grupa \"%s\" została usunięta."
 
 #: views.py:304
 #, python-format
 msgid "Error deleting group \"%(group)s\": %(error)s"
-msgstr "Error al eliminar el grupo \"%(group)s\": %(error)s "
+msgstr "Błąd podczas usuwania grupy \" %(group)s \": %(error)s "
 
 #: views.py:319
 #, python-format
 msgid "Are you sure you wish to delete the group: %s?"
-msgstr "¿Está seguro que desea eliminar el grupo: %s?"
+msgstr "Czy na pewno chcesz usunąć grupę:%s?"
 
 #: views.py:321
 #, python-format
 msgid "Are you sure you wish to delete the groups: %s?"
-msgstr "¿Está seguro que desea eliminar los grupos: %s?"
+msgstr ""
 
 #: views.py:351
 #, python-format
 msgid "non members of group: %s"
-msgstr "no miembros del grupo: %s"
+msgstr "niebędących członkami grupy:%s"
 
 #: views.py:352
 #, python-format
 msgid "members of group: %s"
-msgstr "miembros del grupo: %s"
+msgstr "Członkowie grupy:%s"
