--- a/apps/user_management/locale/ru/LC_MESSAGES/django.po
+++ b/apps/user_management/locale/ru/LC_MESSAGES/django.po
@@ -3,263 +3,262 @@
 # This file is distributed under the same license as the PACKAGE package.
 #
 # Translators:
-# Roberto Rosario <roberto.rosario.gonzalez@gmail.com>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: Mayan EDMS\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-02-12 15:20-0400\n"
-"PO-Revision-Date: 2012-02-02 18:30+0000\n"
+"PO-Revision-Date: 2012-02-02 18:18+0000\n"
 "Last-Translator: Roberto Rosario <roberto.rosario.gonzalez@gmail.com>\n"
-"Language-Team: Spanish (Castilian) (http://www.transifex.net/projects/p/"
-"mayan-edms/team/es/)\n"
-"Language: es\n"
+"Language-Team: Russian (http://www.transifex.net/projects/p/mayan-edms/team/"
+"ru/)\n"
+"Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2)\n"
 
 #: __init__.py:13
 msgid "user list"
-msgstr "lista de usuarios"
+msgstr "список пользователей"
 
 #: __init__.py:14 views.py:31
 msgid "users"
-msgstr "usuarios"
+msgstr "пользователи"
 
 #: __init__.py:15 __init__.py:24
 msgid "edit"
-msgstr "editar"
+msgstr "редактировать"
 
 #: __init__.py:16 views.py:97
 msgid "create new user"
-msgstr "crear nuevo usuario"
+msgstr "создать нового пользователя"
 
 #: __init__.py:17 __init__.py:18 __init__.py:26 __init__.py:27
 msgid "delete"
-msgstr "eliminar"
+msgstr "удалить"
 
 #: __init__.py:19 __init__.py:20
 msgid "reset password"
-msgstr "restablecer contraseña"
+msgstr "сброс пароля"
 
 #: __init__.py:22
 msgid "group list"
-msgstr "list de group"
+msgstr "список групп"
 
 #: __init__.py:23 views.py:228
 msgid "groups"
-msgstr "grupos"
+msgstr "группы"
 
 #: __init__.py:25 views.py:276
 msgid "create new group"
-msgstr "crear nuevo grupo"
+msgstr "создать новую группу"
 
 #: __init__.py:28 views.py:232
 msgid "members"
-msgstr "miembros"
+msgstr "Участники"
 
 #: forms.py:13
 msgid "New password"
-msgstr "Nueva contraseña"
+msgstr "Новый пароль"
 
 #: forms.py:14
 msgid "Confirm password"
-msgstr "Confirmar contraseña"
+msgstr "Подтвердите пароль"
 
 #: permissions.py:7
 msgid "User management"
-msgstr "Administración de usuarios"
+msgstr "Управление пользователями"
 
 #: permissions.py:9
 msgid "Create new users"
-msgstr "Crear nuevos usuarios"
+msgstr "Создание новых пользователей"
 
 #: permissions.py:10
 msgid "Edit existing users"
-msgstr "Editar usuarios existentes"
+msgstr "Редактирование существующих пользователей"
 
 #: permissions.py:11
 msgid "View existing users"
-msgstr "Ver usuarios existentes"
+msgstr "Просмотр существующих пользователей"
 
 #: permissions.py:12
 msgid "Delete existing users"
-msgstr "Eliminar usuarios existentes"
+msgstr "Удаление существующих пользователей"
 
 #: permissions.py:14
 msgid "Create new groups"
-msgstr "Crear nuevos grupos"
+msgstr "Создание новых групп"
 
 #: permissions.py:15
 msgid "Edit existing groups"
-msgstr "Editar grupos existentes"
+msgstr "Редактирование существующих групп"
 
 #: permissions.py:16
 msgid "View existing groups"
-msgstr "Ver grupos existentes"
+msgstr "Просмотр существующих групп"
 
 #: permissions.py:17
 msgid "Delete existing groups"
-msgstr "Eliminar grupos existentes"
+msgstr "Удалить существующие группы"
 
 #: views.py:35
 msgid "full name"
-msgstr "nombre completo"
+msgstr "полное имя"
 
 #: views.py:39
 msgid "email"
-msgstr "correo electrónico"
+msgstr "электронная почта"
 
 #: views.py:43
 msgid "active"
-msgstr "activo"
+msgstr "активно"
 
 #: views.py:47
 msgid "has usable password?"
-msgstr "¿Tiene contraseña utilizable?"
+msgstr ""
 
 #: views.py:61
 msgid ""
 "Super user and staff user editing is not allowed, use the admin interface "
 "for these cases."
 msgstr ""
-"No se permite editar el super usuario y usuario de personal, use la interfaz "
-"de administración para estos casos."
+"Редактирование суперпользователя и персонала не допускается, используйте для "
+"этого интерфейс администратора."
 
 #: views.py:68
 #, python-format
 msgid "User \"%s\" updated successfully."
-msgstr "Usuario \"%s\" actualizado exitsamente."
+msgstr "Пользователь \"%s\"обновлён"
 
 #: views.py:74
 #, python-format
 msgid "edit user: %s"
-msgstr "editar usuario: %s"
+msgstr "редактировать пользователя: %s."
 
 #: views.py:77 views.py:135 views.py:198
 msgid "user"
-msgstr "usuario"
+msgstr "пользователь"
 
 #: views.py:91
 #, python-format
 msgid "User \"%s\" created successfully."
-msgstr "Usuario \"%s\" ha creado exitosamente."
+msgstr "Пользователь \"%s\" создан."
 
 #: views.py:113 views.py:167
 msgid "Must provide at least one user."
-msgstr "Debe proveer al menos un usuario."
+msgstr "Должен быть хотя бы один пользователь."
 
 #: views.py:123
 msgid ""
 "Super user and staff user deleting is not allowed, use the admin interface "
 "for these cases."
 msgstr ""
-"No se permite eliminar el super usuario y usuario de personal, use la "
-"interfaz de administración para estos casos."
+"Удаление суперпользователя и  персонала не допускается, используйте "
+"интерфейс администратора для этих случаев."
 
 #: views.py:126
 #, python-format
 msgid "User \"%s\" deleted successfully."
-msgstr "Usuario \"%s\" eliminado exitosamente."
+msgstr "Пользователь \"%s\" удален."
 
 #: views.py:128
 #, python-format
 msgid "Error deleting user \"%(user)s\": %(error)s"
-msgstr "Error eliminando el usuario \"%(user)s\": %(error)s "
+msgstr "Ошибка при удалении пользователя \"%(user)s\": %(error)s"
 
 #: views.py:143
 #, python-format
 msgid "Are you sure you wish to delete the user: %s?"
-msgstr "¿Está seguro que desea eliminar el usuario: %s?"
+msgstr "Вы действительно хотите удалить пользователя:%s?"
 
 #: views.py:145
 #, python-format
 msgid "Are you sure you wish to delete the users: %s?"
-msgstr "¿Está seguro que desea eliminar los usuarios: %s?"
+msgstr "Вы действительно хотите удалить пользователей:%s?"
 
 #: views.py:178
 msgid "Passwords do not match, try again."
-msgstr "Las contraseñas no coinciden, vuelva a intentarlo."
+msgstr "Пароли не совпадают, попробуйте еще раз."
 
 #: views.py:183
 msgid ""
 "Super user and staff user password reseting is not allowed, use the admin "
 "interface for these cases."
 msgstr ""
-"No se permite cambiar la contraseña del super usuario y usuarios de "
-"personal, use la interfaz de administración para estos casos."
+"Сброс паролей суперпользователя и персонала не допускается, используйте "
+"интерфейс администратора для этих случаев."
 
 #: views.py:187
 #, python-format
 msgid "Successfull password reset for user: %s."
-msgstr "Restablecimiento exitoso de contraseña para el usuario: %s."
+msgstr "Пароль пользователя %s сброшен."
 
 #: views.py:189
 #, python-format
 msgid "Error reseting password for user \"%(user)s\": %(error)s"
-msgstr ""
-"Error de restaurando la contraseña para el usuario \"%(user)s\": %(error)s "
+msgstr "Ошибка сброса пароля для пользователя \"%(user)s\": %(error)s"
 
 #: views.py:205
 #, python-format
 msgid "Reseting password for user: %s"
-msgstr "Restaurando contraseña del usuario: %s"
+msgstr "Сброс пароля пользователя: %s"
 
 #: views.py:207
 #, python-format
 msgid "Reseting password for users: %s"
-msgstr "Restaurando la contraseña de los usuarios: %s"
+msgstr "Сброс пароля для пользователей: %s"
 
 #: views.py:249
 #, python-format
 msgid "Group \"%s\" updated successfully."
-msgstr "Grupo \"%s\" actualizado exitosamente."
+msgstr "Группа \"%s\" обновлены."
 
 #: views.py:255
 #, python-format
 msgid "edit group: %s"
-msgstr "editar grupo: %s"
+msgstr "редактировать группу: %s"
 
 #: views.py:258 views.py:311 views.py:356
 msgid "group"
-msgstr "grupo"
+msgstr "группа"
 
 #: views.py:270
 #, python-format
 msgid "Group \"%s\" created successfully."
-msgstr "Grupo \"%s\" creado exitosamente."
+msgstr "Группа \"%s\"создана."
 
 #: views.py:292
 msgid "Must provide at least one group."
-msgstr "Debe proveer al menos un grupo."
+msgstr "Должна быть хотя бы одна группа."
 
 #: views.py:302
 #, python-format
 msgid "Group \"%s\" deleted successfully."
-msgstr "Grupo \"%s\" eliminado con exitosamente."
+msgstr "Группа \"%s\" удалена."
 
 #: views.py:304
 #, python-format
 msgid "Error deleting group \"%(group)s\": %(error)s"
-msgstr "Error al eliminar el grupo \"%(group)s\": %(error)s "
+msgstr "Ошибка при удалении группы \"%(group)s\": %(error)s"
 
 #: views.py:319
 #, python-format
 msgid "Are you sure you wish to delete the group: %s?"
-msgstr "¿Está seguro que desea eliminar el grupo: %s?"
+msgstr "Вы действительно хотите удалить группу: %s?"
 
 #: views.py:321
 #, python-format
 msgid "Are you sure you wish to delete the groups: %s?"
-msgstr "¿Está seguro que desea eliminar los grupos: %s?"
+msgstr "Вы действительно хотите удалить группы: %s?"
 
 #: views.py:351
 #, python-format
 msgid "non members of group: %s"
-msgstr "no miembros del grupo: %s"
+msgstr "не входят в группу: %s"
 
 #: views.py:352
 #, python-format
 msgid "members of group: %s"
-msgstr "miembros del grupo: %s"
+msgstr "входят в группу: %s"
